paypal and subscricpiton limit added

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,9 @@
             crossorigin="anonymous"
         />
 
+        <!-- paypal -->
+        <script src="https://www.paypal.com/sdk/js?client-id=AY2mhH72AIX9T04Gjd0g5HqZHaQDxDa9yaD4Y-b0cphTggy_F3Q3YKoAQRTLIMZfq298zUXGeHxIeYpK&currency=USD"></script>
+
         <title>TODO App</title>
     </head>
     <body>
